src/unfold/styles.css
/* ... */
.select2-container--admin-autocomplete .select2-selection--multiple li.select2-selection__choice .select2-selection__choice__remove {
  @apply align-top text-[0px] hover:text-base-600 dark:hover:text-base-200;
}

.select2-container--admin-autocomplete .select2-selection--multiple li.select2-selection__choice .select2-selection__choice__remove:after {
  @apply content-['close\_small'] h-7 leading-7! material-symbols-outlined;

  font-size: 14px;
}

.select2-container--admin-autocomplete .select2-selection--multiple li.select2-search--inline .select2-search__field {
  @apply m-0 h-7 ml-2 text-base-500 text-sm;
}

/*******************************************************
 Fieldset collapsible
 *******************************************************/
fieldset.collapsed > div {
  display: none;
}

fieldset.collapse {
  @apply visible;
}

fieldset.collapsed h2,
fieldset.collapsed {
  @apply block;
}

fieldset.collapsed .collapse-toggle {
  @apply inline;
}

fieldset details > summary {
  @apply list-none
}

fieldset details > summary:after {
  @apply material-symbols-outlined absolute cursor-pointer right-3 top-2.5;
  content: "expand_more";
}

fieldset details[open] > summary:after {
  @apply rotate-180;
}

/*******************************************************
 Calendar
 *******************************************************/
.calendarbox .calendar {
  @apply min-h-[320px];
}

.calendarbox,
.clockbox {
  @apply bg-white border border-base-200 rounded-default shadow-xs w-80 !z-70 dark:bg-base-800 dark:border-base-700 fixed! left-1/2! top-1/2! -translate-x-1/2 -translate-y-1/2;
}

.calendar caption {
  @apply font-semibold mb-3 py-3 text-important;
}

.calendar table {
  @apply mb-3 w-full;
}

.calendar table th {
  @apply font-semibold text-center text-important text-xs;
}

.calendar table td {
  @apply h-10 p-1 text-center w-10;
}

.calendar table td a {
  @apply block flex h-8 items-center justify-center rounded-full w-8 dark:text-base-300;
}

.calendar table td a:hover {
  @apply bg-base-100 text-base-700;
}

.calendar table td.today a {
  @apply bg-primary-600 font-medium  text-white;
}

.calendar-shortcuts {
  @apply flex flex-row justify-center mb-3 px-1 rounded-b text-[0px];
}

.calendar-shortcuts a {
  @apply border border-base-200 font-medium leading-none mx-1 px-2 py-2 rounded-default shadow-xs text-center text-base-500 text-xs w-1/3 dark:border-base-700 dark:text-base-300 ;
}

.calendar-cancel {
  @apply block border-t border-base-200 py-2 text-center text-xs text-red-600 dark:border-base-700 dark:text-red-500;
}

.calendarnav-previous {
  @apply absolute block ml-2 mt-2 left-0 text-[0px] top-0;
}

.calendarnav-next,
.calendarnav-previous {
  @apply after:border after:border-base-200 after:flex after:h-7 after:items-center after:justify-center after:material-symbols-outlined after:rounded-full after:transition-all after:w-7 dark:after:bg-base-800 dark:after:border-base-700;
}

.calendarnav-previous:after {
  content: "navigate_before";
  display: flex;
}

.calendarnav-next:after {
  content: "navigate_next";
  display: flex;
}

.calendarnav-next {
  @apply absolute block mr-2 mt-2 right-0 text-[0px] top-0;
}

/*******************************************************
 Timepicker
 *******************************************************/
.clockbox {
  @apply bg-white border border-base-200 rounded-default shadow-xs text-sm dark:bg-base-800 dark:border-base-700 z-50;
}

.clockbox h2 {
  @apply font-medium px-3 py-2 text-base-700 dark:text-base-200;
}
.clockbox .timelist {
  @apply pb-2 px-3 text-base-500 dark:text-base-300;
}

.clockbox .timelist li {
  @apply block pb-1 transition-all;
}
.clockbox .timelist li:hover {
  @apply text-primary-500;
}

/*******************************************************
 Htmx
 *******************************************************/
.htmx-indicator.htmx-swapping:before {
  @apply absolute bg-white bottom-0 left-0 opacity-80 transition-all right-0 top-0;
  content: "";
}

.htmx-indicator.htmx-swapping:after {
  @apply absolute animate-spin h-4 inset-1/2 material-symbols-outlined md-16 text-base-400 w-4;
  content: "sync";
}

/*******************************************************
 Filters
 *******************************************************/
#changelist-filter .admin-numeric-filter-slider .noUi-handle {
  @apply bg-white border border-base-200 cursor-pointer h-4 -right-4 rounded-full shadow-xs w-4 dark:bg-base-200 dark:border-base-200;
}

#changelist-filter .admin-numeric-filter-slider .noUi-handle-upper {
  @apply right-0;
}

#changelist-filter .admin-numeric-filter-slider .noUi-handle:after {
  content: none;
}

#changelist-filter .admin-numeric-filter-slider .noUi-handle:before {
  content: none;
}

#changelist-filter .admin-numeric-filter-slider.noUi-target {
  @apply bg-base-200 border-0 h-1 shadow-none dark:bg-base-600;
}

#changelist-filter .admin-numeric-filter-slider .noUi-connect {
  @apply bg-primary-600 border-0 h-1;
}

/*******************************************************
 Trix
 *******************************************************/
trix-toolbar[id^="trix-toolbar-"] {
  @apply sticky top-0 dark:bg-base-900;
}

.trix-active {
  @apply text-primary-600;
}

/*******************************************************
 django-modeltranslation
 *******************************************************/
.ui-tabs {
  @apply flex flex-col;
}

.ui-tabs.ui-widget .ui-tabs-nav {
  @apply bg-base-100 border-0 flex gap-2 m-0 ml-3 mb-0 mt-3 mr-auto p-1 rounded-default text-sm dark:bg-white/[.04] after:hidden;
}

.ui-tabs.ui-widget .ui-tabs-nav li {
  @apply border-0 top-0;
}

.ui-tabs.ui-widget .ui-tabs-nav li a {
  @apply bg-transparent border-0 flex flex-row font-medium items-center m-0 px-2.5 py-1 rounded-default text-base-400 text-sm hover:bg-base-700/[.04] hover:text-base-700 dark:hover:bg-white/[.04] dark:hover:text-white;
}
/* ... */

